style: run openrewrite